k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: hotel-booking
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
